create a recursive function where the end case is blackjack or bust and figure out if itd be more favorable to hit or stand
